# os_lab1

DynamicLib/: DynamicLib.sln
DynamicLib/DynamicLib/: DynamicLib.vcxproj  Vector.cpp  Vector.h
DynamicLib/DynamicLib/x64/Debug/: DynamicLib.dll.recipe  DynamicLib.ilk  vc143.idb
DynamicLib/DynamicLib/x64/Debug/DynamicLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  DynamicLib.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
DynamicLib/x64/Debug/: DynamicLib.exp  DynamicLib.lib
LibrariesDemo/: LibrariesDemo.sln  LibrariesDemo.vcxproj  main.cpp
LibrariesDemo/LibrariesDemo/x64/Debug/: LibrariesDemo.exe.recipe  LibrariesDemo.ilk  vc143.idb  vc145.idb
LibrariesDemo/LibrariesDemo/x64/Debug/LibrariesDemo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  LibrariesDemo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
LinuxFiles/: CMakeLists.txt  Number.cpp  Vector.h  main_exec
StaticLib/: StaticLib.sln
StaticLib/StaticLib/: Number.h  StaticLib.vcxproj  StaticLib.vcxproj.filters
StaticLib/StaticLib/x64/Debug/StaticLib.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  StaticLib.lastbuildstate
StaticLib/x64/Debug/: StaticLib.idb  StaticLib.lib
